--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/super.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="title" content="Super Talent - Find Jobs & Hire Skilled Professionals">
+  <meta name="description"
+    content="Super Talent is a modern job platform where you can find your dream job, hire top professionals, and grow your business faster. Explore thousands of opportunities and talents in one place.">
+  <meta name="keywords"
+    content="Super Talent, job platform, freelance marketplace, hire professionals, find jobs, remote work, online jobs, career growth, freelancer, recruiter">
+  <meta name="author" content="Super Talent Team">
+
+  <!-- ✅ Social Preview (Open Graph) -->
+  <meta property="og:title" content="Super Talent - Find Jobs & Hire Skilled Professionals" />
+  <meta property="og:description"
+    content="Discover thousands of job opportunities and connect with top talents worldwide. Build your future with Super Talent." />
+  <meta property="og:image" content="/super.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://supertalent.com" />
+
+  <!-- ✅ Favicon & Scripts -->
   <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
-  <title>super</title>
+  <title>Super Talent</title>
 </head>
 
 <body>
